html-css/module-06/homework/css/style.css
*, 
*::before, 
*::after {
  box-sizing: inherit;
  /* font-size: 0; */
  margin: 0;
  padding: 0;
}

a {
  display: block;
  text-decoration: none;
}

ul {
  list-style: none;
}

.wrapper {
  width: 1200px;
  margin: 0 auto;
}

.logo {
  color: #95e1d3;
  font-family: 'Montserrat - bold', sans-serif;
  font-size: 30px;
  font-weight: 900;
}

.header {
  display: flex;
  justify-content: space-between;
  padding-top: 40px;
  margin-bottom: 110px;
}

.main-menu {
  display: flex;
  width: 490px;
  justify-content: space-between;
}

.menu-link {
  font-family: 'Montserrat', sans-serif;
  font-size: 14px;
  font-weight: 700;
  text-transform: uppercase;
  color: #95e1d3;
  padding-bottom: 10px;
}

.menu-link:hover {
  color: #f38181;
  border-bottom: solid;
}

.section-title {
  text-align: center;
  color: #333333;
  font-family: 'Montserrat - bold', sans-serif;
  font-size: 30px;
  font-weight: 700;
  text-transform: uppercase;
}

.section-title::before {
  content: "We work with";
  display: block;
  margin-bottom: 20px;
  color: #333333;
  font-family: 'Kaushan Script', cursive;
  font-size: 24px;
  font-weight: 400;
  text-transform: none;
}

.section-title::after {
  content: "";
  display: block;
  height: 3px;
  width: 60px;
  background-color: #f38181;
  margin: 32px auto 66px;
}

.services-list {
  margin-bottom: 110px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.service::before {
  content: "";
  width: 83px;
  height: 67px;
  flex-shrink: 0;
  background-repeat: no-repeat;
}

.alarm::before {
  background-image: url('../img/icons/ALARM.png');
}

.chart::before {
  background-image: url('../img/icons/LINE_GRAPH.png');
}

.computer::before {
  background-image: url('../img/icons/_OK.png');
}

.book::before {
  background-image: url('../img/icons/BOOK_2.png');
}

.house::before {
  background-image: url('../img/icons/HOME.png');
}

.square::before {
  background-image: url('../img/icons/IMAGE.png');
}

.service {
  width: 383px;
  display: flex;
}

.service:not(:nth-last-child(-n+3)) {
  margin-bottom: 100px;
}

/* TODO: fix layout */

.service-content {
  display: flex;
  flex-direction: column;
}

.service-title {
  margin: 0;
  padding: 0;
  margin-bottom: 20px;
  color: #333333;
  font-family: 'Montserrat';
  font-size: 14px;
  font-weight: 400;
  text-transform: uppercase;
}

.service-description {
  color: #999999;
  font-family: Roboto;
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
}

.team .section-title::before {
  content: 'Who we are';
}

.team-section-descr {
  padding: 0 110px;
  margin-bottom: 100px;
  font-size: 15px;
  font-family: "Roboto";
  color: rgb(152, 152, 152);
  line-height: 1.6;
  text-align: center;
}

.team-tiles {
  display: flex;
  justify-content: space-between;
}

.teammate-name, .teammate-position {
  text-align: center;
  padding: 0;
  margin: 0;
}

.teammate-name {
  font-size: 14px;
  font-family: 'Montserrat', sans-serif;
  color: rgb(54, 54, 54);
  text-transform: uppercase;
  line-height: 1.2;
  margin-bottom: 15px;
}

.teammate-position {
  color: #999999;
  font-family: 'Roboto - Light Italic';
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
}

.team {
  margin-bottom: 80px;
}

.overlay-block {
  position: relative;
  margin-bottom: 30px;
  width: 380px;
  height: 470px;
}

.overlay {
  width: 380px;
  height: 470px;
  display: flex;
  position: absolute;
  background-image: linear-gradient(to top, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%);
  opacity: 0;
  justify-content: center;
  top: 0;
  transition-property: opacity, transform, box-shadow;
  transition-timing-function: linear;
  transition-duration: .2s;
}

.overlay-block:hover>.overlay {
  opacity: 1;
}

.overlay-block:hover {
  transform: translate(-10px, -10px);
  box-shadow: 10px 10px 0px 0px rgba(149, 225, 211, 1);
}

.social-link {
  width: 56px;
  height: 56px;
  background-color: #fce38a;
  margin: auto 0;
  background-repeat: no-repeat;
  background-position: center;
  transition-property: background-color;
  transition-timing-function: linear;
  transition-duration: .2s;
}

.social-link:not(:last-child) {
  border-right: solid 1px #f38181;
}

.facebook {
  background-image: url('../img/icons/facebook.png');
}

.twitter {
  background-image: url('../img/icons/twitter.png');
}

.pinterest {
  background-image: url('../img/icons/pinterest.png');
}

.instagram {
  background-image: url('../img/icons/instagram.png');
}

.social-link:hover {
  background-color: #95e1d3;
  cursor: pointer;
}

.footer {
  height: 62px;
  display: flex;
  justify-content: space-between;
  border-top: solid;
  border-top-width: 1px;
  border-color: #e5e5e5;
}

.copyrights {
  margin: auto 0;
  color: #333333;
  font-family: 'Montserrat';
  font-size: 14px;
  font-weight: 400;
}

.dev-by {
  color: #f38181;
}

.subscribe-block {
  margin: auto 0;
}

.email {
  margin: 0;
  padding: 0;
  width: 230px;
  height: 38px;
  border: 1px solid #e7e7e7;
  background-color: #ffffff;
}

.subscribe {
  width: 150px;
  height: 40px;
  background-color: #95e1d3;
  border: none;
  color: #ffffff;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 700;
  text-transform: uppercase;
  margin-left: -6px;
}

.email::placeholder {
  color: #cccccc;
  font-family: "Roboto - Light Italic";
  font-size: 15px;
  font-weight: 400;
  line-height: 24px;
}

